[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Mateusz Kocz <mateusz@kocz.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]